chore: install mongoose and jsonwebtoken dependencies

--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/mongoose": "^5.11.97",
     "@types/styled-components": "^5.1.34",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.18.1",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
